--- a/examples/ma.tex
+++ b/examples/ma.tex
@@ -31,6 +31,20 @@
 % docinfo (width of docinfo table)
 \DUprovidelength{\DUdocinfowidth}{0.9\textwidth}
 
+% inline markup (custom roles)
+% \DUrole{#1}{#2} tries \DUrole#1{#2}
+\providecommand*{\DUrole}[2]{%
+  \ifcsname DUrole#1\endcsname%
+    \csname DUrole#1\endcsname{#2}%
+  \else% backwards compatibility: try \docutilsrole#1{#2}
+    \ifcsname docutilsrole#1\endcsname%
+      \csname docutilsrole#1\endcsname{#2}%
+    \else%
+      #2%
+    \fi%
+  \fi%
+}
+
 % hyperlinks:
 \ifthenelse{\isundefined{\hypersetup}}{
   \usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
@@ -66,39 +80,39 @@
 \textbf{Create 11 point moving average filter and plot its frequency response and print the values.}
 %
 \begin{quote}{\ttfamily \raggedright \noindent
-from~pylab~import~*\\
-import~scipy.signal~as~signal\\
-\#A~function~to~plot~frequency~and~phase~response\\
-def~mfreqz(b,a=1):\\
-~~~~w,h~=~signal.freqz(b,a)\\
-~~~~h~=~abs(h)\\
-~~~~return(w/max(w),~h)
+\DUrole{keyword}{\DUrole{namespace}{from}}~\DUrole{name}{\DUrole{namespace}{pylab}}~\DUrole{keyword}{\DUrole{namespace}{import}}~\DUrole{operator}{*}~\\
+\DUrole{keyword}{\DUrole{namespace}{import}}~\DUrole{name}{\DUrole{namespace}{scipy.signal}}~\DUrole{keyword}{\DUrole{namespace}{as}}~\DUrole{name}{\DUrole{namespace}{signal}}~\\
+\DUrole{comment}{\#A~function~to~plot~frequency~and~phase~response}~\\
+\DUrole{keyword}{def}~\DUrole{name}{\DUrole{function}{mfreqz}}\DUrole{punctuation}{(}\DUrole{name}{b}\DUrole{punctuation}{,}\DUrole{name}{a}\DUrole{operator}{=}\DUrole{literal}{\DUrole{number}{\DUrole{integer}{1}}}\DUrole{punctuation}{):}~\\
+~~~~\DUrole{name}{w}\DUrole{punctuation}{,}\DUrole{name}{h}~\DUrole{operator}{=}~\DUrole{name}{signal}\DUrole{operator}{.}\DUrole{name}{freqz}\DUrole{punctuation}{(}\DUrole{name}{b}\DUrole{punctuation}{,}\DUrole{name}{a}\DUrole{punctuation}{)}~\\
+~~~~\DUrole{name}{h}~\DUrole{operator}{=}~\DUrole{name}{\DUrole{builtin}{abs}}\DUrole{punctuation}{(}\DUrole{name}{h}\DUrole{punctuation}{)}~\\
+~~~~\DUrole{keyword}{return}\DUrole{punctuation}{(}\DUrole{name}{w}\DUrole{operator}{/}\DUrole{name}{\DUrole{builtin}{max}}\DUrole{punctuation}{(}\DUrole{name}{w}\DUrole{punctuation}{),}~\DUrole{name}{h}\DUrole{punctuation}{)}
 }
 \end{quote}
 
 \textbf{Make the impulse response function and use terminal formatted output (=doctest block.)}
 %
 \begin{quote}{\ttfamily \raggedright \noindent
->{}>{}>~n~=~11.\\
->{}>{}>~n\\
-11.0\\
->{}>{}>~b~=~repeat(1/n,~n)\\
->{}>{}>~b\\
-array({[}~0.09090909,~~0.09090909,~~0.09090909,~~0.09090909,~~0.09090909,\\
-~~~~~~~~0.09090909,~~0.09090909,~~0.09090909,~~0.09090909,~~0.09090909,\\
-~~~~~~~~0.09090909{]})
+\DUrole{operator}{>{}>{}>}~\DUrole{name}{n}~\DUrole{operator}{=}~\DUrole{literal}{\DUrole{number}{\DUrole{float}{11.}}}~\\
+\DUrole{operator}{>{}>{}>}~\DUrole{name}{n}~\\
+\DUrole{literal}{\DUrole{number}{\DUrole{float}{11.0}}}~\\
+\DUrole{operator}{>{}>{}>}~\DUrole{name}{b}~\DUrole{operator}{=}~\DUrole{name}{repeat}\DUrole{punctuation}{(}\DUrole{literal}{\DUrole{number}{\DUrole{integer}{1}}}\DUrole{operator}{/}\DUrole{name}{n}\DUrole{punctuation}{,}~\DUrole{name}{n}\DUrole{punctuation}{)}~\\
+\DUrole{operator}{>{}>{}>}~\DUrole{name}{b}~\\
+\DUrole{name}{array}\DUrole{punctuation}{({[}}~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~\\
+~~~~~~~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{,}~\\
+~~~~~~~~\DUrole{literal}{\DUrole{number}{\DUrole{float}{0.09090909}}}\DUrole{punctuation}{{]})}
 }
 \end{quote}
 
 \textbf{Calculate the frequency response and plot it:}
 %
 \begin{quote}{\ttfamily \raggedright \noindent
-w,~h~=~mfreqz(b)\\
-\#Plot~the~function\\
-plot(w,h,'k')\\
-ylabel('Amplitude')\\
-xlabel(r'Normalized~Frequency~(x\$\textbackslash{}pi\$rad/sample)')\\
-show()
+\DUrole{name}{w}\DUrole{punctuation}{,}~\DUrole{name}{h}~\DUrole{operator}{=}~\DUrole{name}{mfreqz}\DUrole{punctuation}{(}\DUrole{name}{b}\DUrole{punctuation}{)}~\\
+\DUrole{comment}{\#Plot~the~function}~\\
+\DUrole{name}{plot}\DUrole{punctuation}{(}\DUrole{name}{w}\DUrole{punctuation}{,}\DUrole{name}{h}\DUrole{punctuation}{,}\DUrole{literal}{\DUrole{string}{'k'}}\DUrole{punctuation}{)}~\\
+\DUrole{name}{ylabel}\DUrole{punctuation}{(}\DUrole{literal}{\DUrole{string}{'Amplitude'}}\DUrole{punctuation}{)}~\\
+\DUrole{name}{xlabel}\DUrole{punctuation}{(}\DUrole{literal}{\DUrole{string}{r'Normalized~Frequency~(x\$\textbackslash{}pi\$rad/sample)'}}\DUrole{punctuation}{)}~\\
+\DUrole{name}{show}\DUrole{punctuation}{()}
 }
 \end{quote}
 \begin{figure}
