--- a/source/examples/FIR_design_pygments.tex
+++ b/source/examples/FIR_design_pygments.tex
@@ -123,7 +123,7 @@ figures/code chunk.
 \PY{n}{In} \PY{p}{[}\PY{l+m+mi}{6}\PY{p}{]}\PY{p}{:} \PY{c}{\PYZsh{}Impulse and step response}
 
 \PY{n}{In} \PY{p}{[}\PY{l+m+mi}{7}\PY{p}{]}\PY{p}{:} \PY{n}{figure}\PY{p}{(}\PY{l+m+mi}{2}\PY{p}{)}
-\PY{n}{Out}\PY{p}{[}\PY{l+m+mi}{7}\PY{p}{]}\PY{p}{:} \PY{o}{\PYZlt{}}\PY{n}{matplotlib}\PY{o}{.}\PY{n}{figure}\PY{o}{.}\PY{n}{Figure} \PY{n+nb}{object} \PY{n}{at} \PY{l+m+mh}{0x7f8a358baf90}\PY{o}{\PYZgt{}}
+\PY{n}{Out}\PY{p}{[}\PY{l+m+mi}{7}\PY{p}{]}\PY{p}{:} \PY{o}{\PYZlt{}}\PY{n}{matplotlib}\PY{o}{.}\PY{n}{figure}\PY{o}{.}\PY{n}{Figure} \PY{n+nb}{object} \PY{n}{at} \PY{l+m+mh}{0x7f088e998f90}\PY{o}{\PYZgt{}}
 \PY{n}{In} \PY{p}{[}\PY{l+m+mi}{8}\PY{p}{]}\PY{p}{:} \PY{n}{impz}\PY{p}{(}\PY{n}{a}\PY{p}{)}
 
 \PY{n}{In} \PY{p}{[}\PY{l+m+mi}{9}\PY{p}{]}\PY{p}{:} \PY{n}{show}\PY{p}{(}\PY{p}{)}
