--- a/source/examples/FIR_design_verb.tex
+++ b/source/examples/FIR_design_verb.tex
@@ -116,7 +116,7 @@ figures/code chunk.
 >>> show()
 >>> #Impulse and step response
 >>> figure(2)
-<matplotlib.figure.Figure object at 0x7f204afe3490>
+<matplotlib.figure.Figure object at 0x7fd35a964490>
 >>> impz(a)
 >>> show()
 
