Commit rebuild of example gallery

--- a/source/examples/FIR_design.tex
+++ b/source/examples/FIR_design.tex
@@ -224,7 +224,7 @@ can now catch multiple figures/code chunk.
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{show}\PY{p}{(}\PY{p}{)}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{c}{\PYZsh{}Impulse and step response}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{figure}\PY{p}{(}\PY{l+m+mi}{2}\PY{p}{)}
-\PY{o}{\PYZlt{}}\PY{n}{matplotlib}\PY{o}{.}\PY{n}{figure}\PY{o}{.}\PY{n}{Figure} \PY{n+nb}{object} \PY{n}{at} \PY{l+m+mh}{0x7f5b21575950}\PY{o}{\PYZgt{}}
+\PY{o}{\PYZlt{}}\PY{n}{matplotlib}\PY{o}{.}\PY{n}{figure}\PY{o}{.}\PY{n}{Figure} \PY{n+nb}{object} \PY{n}{at} \PY{l+m+mh}{0x7f9bc742a6d0}\PY{o}{\PYZgt{}}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{impz}\PY{p}{(}\PY{n}{a}\PY{p}{)}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{show}\PY{p}{(}\PY{p}{)}
 \end{Verbatim}
