--- a/source/examples/FIR_design_minted.tex
+++ b/source/examples/FIR_design_minted.tex
@@ -117,7 +117,7 @@ figures/code chunk.
 >>> show()
 >>> #Impulse and step response
 >>> figure(2)
-<matplotlib.figure.Figure object at 0x7f09298a6490>
+<matplotlib.figure.Figure object at 0x7fc991fab910>
 >>> impz(a)
 >>> show()
 
