--- a/source/examples/FIR_design.tex
+++ b/source/examples/FIR_design.tex
@@ -224,12 +224,12 @@ can now catch multiple figures/code chunk.
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{show}\PY{p}{(}\PY{p}{)}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{c}{\PYZsh{}Impulse and step response}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{figure}\PY{p}{(}\PY{l+m+mi}{2}\PY{p}{)}
-\PY{o}{\PYZlt{}}\PY{n}{matplotlib}\PY{o}{.}\PY{n}{figure}\PY{o}{.}\PY{n}{Figure} \PY{n+nb}{object} \PY{n}{at} \PY{l+m+mh}{0x7f9bc742a6d0}\PY{o}{\PYZgt{}}
+\PY{o}{\PYZlt{}}\PY{n}{matplotlib}\PY{o}{.}\PY{n}{figure}\PY{o}{.}\PY{n}{Figure} \PY{n+nb}{object} \PY{n}{at} \PY{l+m+mh}{0x7f4bd8c82f90}\PY{o}{\PYZgt{}}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{impz}\PY{p}{(}\PY{n}{a}\PY{p}{)}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{show}\PY{p}{(}\PY{p}{)}
 \end{Verbatim}
-\includegraphics[width= \linewidth]{figures/FIR_design_figure3_1.pdf}
-\includegraphics[width= \linewidth]{figures/FIR_design_figure3_2.pdf}
+\includegraphics[width= \linewidth]{figures/FIR_design_figure2_1.pdf}
+\includegraphics[width= \linewidth]{figures/FIR_design_figure2_2.pdf}
 
 \subsection{Highpass FIR Filter}\label{highpass-fir-filter}
 
@@ -244,7 +244,7 @@ you'll notice that it has become easier since 2009. You don't need to do
 \PY{n}{mfreqz}\PY{p}{(}\PY{n}{a}\PY{p}{)}
 \PY{n}{show}\PY{p}{(}\PY{p}{)}
 \end{Verbatim}
-\includegraphics[width= \linewidth]{figures/FIR_design_figure4_1.pdf}
+\includegraphics[width= \linewidth]{figures/FIR_design_figure3_1.pdf}
 
 \subsection{Bandpass FIR filter}\label{bandpass-fir-filter}
 
@@ -259,7 +259,7 @@ Notice that the plot has a caption defined in code chunk options.
 \end{Verbatim}
 \begin{figure}[htpb]
 \center
-\includegraphics[width= \linewidth]{figures/FIR_design_figure5_1.pdf}
+\includegraphics[width= \linewidth]{figures/FIR_design_figure4_1.pdf}
 \caption{Bandpass FIR filter.}
 \label{fig:None}
 \end{figure}
