--- a/source/examples/FIR_design_verb.tex
+++ b/source/examples/FIR_design_verb.tex
@@ -116,7 +116,7 @@ figures/code chunk.
 >>> show()
 >>> #Impulse and step response
 >>> figure(2)
-<matplotlib.figure.Figure object at 0x7f5c743f1090>
+<matplotlib.figure.Figure object at 0x7fb4a0409ad0>
 >>> impz(a)
 >>> show()
 
