--- a/source/examples/AR_yw.tex
+++ b/source/examples/AR_yw.tex
@@ -218,6 +218,8 @@ It can be calcuted easily using \texttt{scipy.signal.freqz}.
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{x} \PY{o}{=} \PY{n}{np}\PY{o}{.}\PY{n}{sin}\PY{p}{(}\PY{n}{np}\PY{o}{.}\PY{n}{linspace}\PY{p}{(}\PY{l+m+mi}{0}\PY{p}{,} \PY{l+m+mi}{20}\PY{p}{)}\PY{p}{)}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{ar1} \PY{o}{=} \PY{n}{YW}\PY{p}{(}\PY{n}{x}\PY{p}{)}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{ar1}\PY{o}{.}\PY{n}{fit}\PY{p}{(}\PY{p}{)}
+\PY{o}{\PYZlt{}}\PY{n}{string}\PY{o}{\PYZgt{}}\PY{p}{:}\PY{l+m+mi}{14}\PY{p}{:} \PY{n}{VisibleDeprecationWarning}\PY{p}{:} \PY{n}{using} \PY{n}{a} \PY{n}{non}\PY{o}{\PYZhy{}}\PY{n}{integer} \PY{n}{number}
+\PY{n}{instead} \PY{n}{of} \PY{n}{an} \PY{n}{integer} \PY{n}{will} \PY{n}{result} \PY{o+ow}{in} \PY{n}{an} \PY{n}{error} \PY{o+ow}{in} \PY{n}{the} \PY{n}{future}
 \PY{o}{\PYZgt{}\PYZgt{}}\PY{o}{\PYZgt{}} \PY{n}{ar1}\PY{o}{.}\PY{n}{phi}
 \PY{n}{array}\PY{p}{(}\PY{p}{[} \PY{l+m+mf}{1.19379795}\PY{p}{,} \PY{o}{\PYZhy{}}\PY{l+m+mf}{0.21810471}\PY{p}{,} \PY{o}{\PYZhy{}}\PY{l+m+mf}{0.12747881}\PY{p}{,} \PY{o}{\PYZhy{}}\PY{l+m+mf}{0.06257484}\PY{p}{,}
 \PY{o}{\PYZhy{}}\PY{l+m+mf}{0.12929761}\PY{p}{]}\PY{p}{)}
